закончил построение мелких сеток на главной странице

--- a/index.html
+++ b/index.html
@@ -236,16 +236,18 @@
         </div>
       <article class="newsletter-subscribe">
         <div class="main-content__container">
-          <div class="newsletter-subscribe__wrapper">
-            <b class="newsletter-subscribe__title title">Подпишитесь на рассылку</b>
-            <p class="newsletter-subscribe__text text">Еженедельный дайджест с обзорами новинок,
+          <div class="newsletter-subscribe__header">
+            <b class="newsletter-subscribe__title title">Подпишитесь <br> на рассылку</b>
+            <p class="newsletter-subscribe__text text">Еженедельный дайджест с обзорами новинок, <br>
                 длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
           </div>
-          <form class="newsletter-subscribe__form" action="#" method="get">
-            <input class="newsletter-subscribe__input" type="email" name="email" placeholder="Ваш e-mail">
-            <button class="newsletter-subscribe__btn">Подписаться</button>
-          </form>
-          <span class="newsletter-subscribe__span text">Это бесплатно</span>
+          <div class="newsletter-subscribe__body">
+            <form class="newsletter-subscribe__form" action="#" method="get">
+              <input class="newsletter-subscribe__input" type="email" name="email" placeholder="Ваш e-mail">
+              <button class="newsletter-subscribe__btn">Подписаться</button>
+            </form>
+            <span class="newsletter-subscribe__span text">Это бесплатно</span>
+          </div>
         </div>
       </article>
     </main>
