Добавил декоративные элементы к хедеру

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 class="visually-hidden">Магазин электроники "Device"</h1>
     <header class="page-header">
       <div class="page-header__container">
-        <a href="#">
+        <a href="#" tabindex=-1>
           <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36">
         </a>
         <div class="user-menu">
@@ -19,7 +19,6 @@
           </form>
           <ul class="site-login__list">
             <li class="site-login__item"><a class="site-login__link" href="#">Войти</a></li>
-            <li class="site-login__item"><a class="site-login__link" href="#"></a></li>
           </ul>
           <ul class="user-menu__list user-menu__list--main">
             <li class="user-menu__item"><a class="user-menu__link " href="#">Сравнить</a></li>
@@ -275,6 +274,6 @@
             <img class="page-footer__img" src="img/social-icons/html.svg" alt="Логотип компании HTML academy" width="115" height="33">
           </a>
         </div>
-    </footer>
+      </footer>
   </body>
 </html>
