--- a/catalog.html
+++ b/catalog.html
@@ -9,8 +9,8 @@
     <h1 class="visually-hidden">Каталог моноподов для селфи</h1>
     <header class="page-header">
       <div class="page-header__container">
-        <a href="index.html">
-          <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36">
+        <a href="index.html" tabindex="-1">
+          <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36" tabindex="1">
         </a>
         <div class="user-menu">
           <form class="search-form" action="#" method="get">
