Сделал декоративные элементы слайдера

--- a/index.html
+++ b/index.html
@@ -43,8 +43,17 @@
               <li class="products-slider__item products-slider__item--active">
                 <div class="products-slider__gallery">
                     <img class="products-slider__img" src="img/slider/slider-1.png" alt="квадрокоптер" width="560" height="560">
-                    <button class="products-slider__pre-btn"><span class="visually-hidden">назад</span></button>
-                    <button class="products-slider__post-btn"><span class="visually-hidden">вперед</span></button>
+                    <button class="products-slider__pre-btn">
+                      <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
+                      </svg>
+                      <span class="visually-hidden">назад</span></button>
+                    <button class="products-slider__post-btn">
+                      <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
+                      </svg>
+                      <span class="visually-hidden">вперед</span>
+                    </button>
                 </div>
                 <div class="products-slider__card">
                   <p class="products-slider__description">Порхает как бабочка,
@@ -67,8 +76,18 @@
               <li class="products-slider__item">
                 <div class="products-slider__gallery">
                   <img class="products-slider__img" src="img/slider/slider-2.png" alt="фитнес-браслет" width="560" height="560">
-                  <button class="products-slider__pre-btn"><span class="visually-hidden">назад</span></button>
-                  <button class="products-slider__post-btn"><span class="visually-hidden">вперед</span></button>
+                  <button class="products-slider__pre-btn">
+                    <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">назад</span>
+                  </button>
+                  <button class="products-slider__post-btn">
+                    <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">вперед</span>
+                  </button>
                 </div>
                 <div class="products-slider__card bracelet-card">
                   <p class="products-slider__description">Худеем <br>
@@ -87,8 +106,18 @@
               <li class="products-slider__item">
                 <div class="products-slider__gallery">
                   <img class="products-slider__img" src="img/slider/slider-3.png" alt="селфи-палка" width="560" height="560">
-                  <button class="products-slider__pre-btn"><span class="visually-hidden">назад</span></button>
-                  <button class="products-slider__post-btn"><span class="visually-hidden">вперед</span></button>
+                  <button class="products-slider__pre-btn">
+                    <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">назад</span>
+                  </button>
+                  <button class="products-slider__post-btn">
+                    <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">вперед</span>
+                  </button>
                 </div>
                 <div class="products-slider__card">
                   <p class="products-slider__description">Делай селфи,
