--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   </button>
                 </div>
                 <div class="products-slider__card">
-                  <p class="products-slider__description">Делай селфи,
+                  <p class="products-slider__description">Делай селфи,  <br>
                     как Бен Стиллер! </p>
                   <p class="products-slider__text text">
                     Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
@@ -143,11 +143,17 @@
                 </div>
               </li>
             </ol>
-            <div class="products-slider__buttons">
-              <button class="product-slider__button product-slider__button--active"></button>
-              <button class="product-slider__button"></button>
-              <button class="product-slider__button"></button>
-            </div>
+            <ul class="products-slider__buttons-list">
+              <li class="products-slider__buttons-item">
+                <button class="product-slider__button product-slider__button--active"></button>
+              </li>
+              <li class="products-slider__buttons-item">
+                <button class="product-slider__button"></button>
+              </li>
+              <li class="products-slider__buttons-item">
+                <button class="product-slider__button"></button>
+              </li>
+            </ul>
         </section>
         <section class="main-goods">
           <h2  class="visually-hidden">Разделы товаров</h2>
@@ -232,12 +238,24 @@
           </div>
         </section>
         <div class="main-content__container">
-          <div class="delivery-info">
-            <div class="delivery-info__image-wrapper">
-              <img class="delivery-info__image" src="img/icons/truck.svg" width="47px" height="31" alt="Грузовик доставляет ваш заказ"></img>
-            </div>
-            <b class="delivery-info__text">Доставим редкий товар под заказ</b>
-          </div>
+          <a href="#" class="delivery-info">
+              <div class="delivery-info__image-wrapper">
+                <img class="delivery-info__image" src="img/icons/truck.svg" width="47px" height="31" alt="Грузовик доставляет ваш заказ"></img>
+              </div>
+              <b class="delivery-info__text">Доставим редкий товар под заказ</b>
+              <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="20.5" cy="20" r="20" fill="#DCDCDC" fill-opacity="0.5"/>
+                <g clip-path="url(#clip0_11468_3000)">
+                <path class="delivery-info__icon" d="M21 14H19V16H21V14Z" fill="black"/>
+                <path class="delivery-info__icon" d="M21 18H19V26H21V18Z" fill="black"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_11468_3000">
+                <rect width="2" height="12" fill="white" transform="translate(19 14)"/>
+                </clipPath>
+                </defs>
+                </svg>
+          </a>
 
           <div class="additional-info">
             <section class="site-info">
@@ -258,7 +276,7 @@
               <p class="contacts__text text">Санкт-Петербург, набережная реки Карповки, 5, литера П. <br> <a class="tel" href="tel:+7128121212">+7 (812) 812-12-12</a></p>
               <b class="contacts__name">Время работы</b>
               <p class="contacts__text text">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
-              <a href="№" class="contacts__link link">Напишите нам</a>
+              <a href="#" class="contacts__link link">Напишите нам</a>
             </section>
           </div>
         </div>
