Доработал логотип в футере

--- a/catalog.html
+++ b/catalog.html
@@ -162,7 +162,9 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__container">
-        <img class="page-footer__logo" src="img/logo/footer-logo.svg" alt="Логотип интернет-магазина 'Device'" width="145" height="36">
+        <a href="index.html">
+          <img class="page-footer__logo" src="img/logo/footer-logo.svg" alt="Логотип интернет-магазина 'Device'" width="145" height="36">
+        </a>
         <div class="page-footer__body">
           <p class="page-footer__adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           <nav class="site-navigation page-footer__site-navigation">
