Закончил стилизацию хлебных крошек

--- a/catalog.html
+++ b/catalog.html
@@ -43,9 +43,9 @@
               <h2 class="products-catalog__title title">Моноподы для селфи</h2>
               <nav class="products-catalog__navigation">
                 <ol class="products-catalog__list">
-                  <li class="products-catalog__item">Главная</li>
-                  <li class="products-catalog__item">Каталог товаров</li>
-                  <li class="products-catalog__item">Моноподы для селфи</li>
+                  <li class="products-catalog__item"><a class="products-catalog__link" href="index.html">Главная</a></li>
+                  <li class="products-catalog__item"><a class="products-catalog__link" href="catalog.html">Каталог товаров</a></li>
+                  <li class="products-catalog__item"><a class="products-catalog__link" href="catalog.html">Моноподы для селфи</a></li>
                 </ol>
               </nav>
             </div>
