--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <nav class="site-navigation page-header__site-navigation">
           <a class="site-navigation__product-catalog" href="#">Каталог товаров</a>
-          <div class="popover popover__product-catalog">
+          <div class="popover popover-product-catalog">
             <ul class="popover__list">
               <li class="popover__item"><a class="popover__link" href="#">Виртуальная реальность</a></li>
               <li class="popover__item"><a class="popover__link" href="#">Фитнес-браслеты</a></li>
