--- a/catalog.html
+++ b/catalog.html
@@ -25,9 +25,20 @@
             <li class="user-menu__item"><a class="user-menu__link" href="#">Сравнить</a></li>
             <li class="user-menu__item"><a class="user-menu__link" href="#">Корзина</a></li>
           </ul>
+
         </div>
         <nav class="site-navigation page-header__site-navigation">
           <a class="site-navigation__product-catalog" href="#">Каталог товаров</a>
+          <div class="popover popover-product-catalog">
+            <ul class="popover__list">
+              <li class="popover__item"><a class="popover__link" href="#">Виртуальная реальность</a></li>
+              <li class="popover__item"><a class="popover__link" href="#">Фитнес-браслеты</a></li>
+              <li class="popover__item"><a class="popover__link" href="#">Квадрокоптеры</a></li>
+              <li class="popover__item"><a class="popover__link" href="catalog.html">Моноподы для cелфи</a></li>
+              <li class="popover__item"><a class="popover__link" href="#">Умные часы</a></li>
+              <li class="popover__item"><a class="popover__link" href="#">Экшн-камеры</a></li>
+            </ul>
+          </div>
           <ul class="site-navigation__list page-header__list">
             <li class="site-navigation__item"><a class="site-navigation__link" href="#">Доставка</a></li>
             <li class="site-navigation__item"><a class="site-navigation__link" href="#">Гарантия</a></li>
