Сделал модальное окно

--- a/catalog.html
+++ b/catalog.html
@@ -44,6 +44,29 @@
             <li class="site-navigation__item"><a class="site-navigation__link" href="#">Гарантия</a></li>
             <li class="site-navigation__item"><a class="site-navigation__link" href="#">Контакты</a></li>
           </ul>
+          <div class="popover popover-basket">
+            <ul class="popover__list">
+              <li class="popover__item">
+                <a class="popover__link" href="#">
+                  <img class="popover__image" src="img/products/product-1.png" alt="Любительская селфи-палка" width="39" height="43">
+                  <p class="popover__product-name">Любительская селфи-палка</p>
+                </a>
+                <button class="popover__close-button" type="submit"></button>
+              </li>
+              <li class="popover__item">
+                <a class="popover__link" href="#">
+                  <img class="popover__image" src="img/products/product-2.png" alt="Профессиональная селфи-палка" width="39" height="43">
+                  <p class="popover__product-name">Профессиональная селфи-палка</p>
+                </a>
+                <button class="popover__close-button" type="submit"></button>
+              </li>
+            </ul>
+            <div class="popover__info">
+              <span class="popover__products-quantity">Товаров: 2</span>
+              <span class="popover__sum">Сумма: 2000 ₽</span>
+            </div>
+            <button class="popover__button" type="submit">Открыть корзину</button>
+          </div>
         </nav>
       </div>
     </header>
