--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Device: моноподы для селфи</title>
+    <link rel="icon" href="img/favicon/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body class="page__body">
