--- a/catalog.html
+++ b/catalog.html
@@ -92,33 +92,66 @@
               <form class="products-filter__search-form" action="#" method="get">
                 <fieldset class="products-filter__price">
                   <legend class="products-filter__title price-title">Стоимость</legend>
-                  <!--Тут будет шкала цены-->
+                  <div class="range">
+                    <div class="range__scale">
+                      <div class="range__bar"  style="left: 0px; width: 119px;">
+                        <button class="range__toggle toggle-min" type="button">
+                          <span class="visually-hidden">Изменить минимальную цену</span>
+                        </button>
+                        <button class="range__toggle toggle-max" type="button">
+                          <span class="visually-hidden">Изменить максимальную цену</span>
+                        </button>
+                      </div>
+                    </div>
+                    <div class="range__wrapper-inputs">
+                      <label class="products-filter__range-label">
+                        <span class="range__span">от</span> <input class="range__input" type="number" value="0" name="min-price">
+                      </label>
+                      <label class="products-filter__range-label">
+                        <span class="range__span">до</span> <input class="range__input" type="number" value="5000" name="max-price">
+                      </label>
+                    </div>
+                  </div>
                 </fieldset>
                 <fieldset class="products-filter__color">
                   <legend class="products-filter__title color-title">Цвет</legend>
-                  <label class="products-filter__label">
-                  <input class="products-filter__checkbox" type="checkbox" value="black" checked> <span class="products-filter__checkbox-text">Черный</span>
+                  <label class="products-filter__label control">
+                    <input class="visually-hidden products-filter__checkbox" type="checkbox" value="black" checked>
+                    <span class="control__mark"></span>
+                    <span class="products-filter__checkbox-text">Черный</span>
                   </label>
-                  <label class="products-filter__label">
-                    <input class="products-filter__checkbox" type="checkbox" value="white" checked> <span class="products-filter__checkbox-text">Белый</span>
+                  <label class="products-filter__label control">
+                    <input class="visually-hidden products-filter__checkbox" type="checkbox" value="white" checked>
+                    <span class="control__mark"></span>
+                    <span class="products-filter__checkbox-text">Белый</span>
                   </label>
-                  <label class="products-filter__label">
-                    <input class="products-filter__checkbox" type="checkbox" value="blue"> <span class="products-filter__checkbox-text">Синий</span>
+                  <label class="products-filter__label control">
+                    <input class="visually-hidden products-filter__checkbox" type="checkbox" value="blue">
+                    <span class="control__mark"></span>
+                    <span class="products-filter__checkbox-text">Синий</span>
                   </label>
-                  <label class="products-filter__label">
-                    <input class="products-filter__checkbox" type="checkbox" value="red"> <span class="products-filter__checkbox-text">Красный</span>
+                  <label class="products-filter__label control">
+                    <input class="visually-hidden products-filter__checkbox" type="checkbox" value="red">
+                    <span class="control__mark"></span>
+                    <span class="products-filter__checkbox-text">Красный</span>
                   </label>
-                  <label class="products-filter__label">
-                    <input class="products-filter__checkbox" type="checkbox" value="pink"> <span class="products-filter__checkbox-text">Розовый</span>
+                  <label class="products-filter__label control">
+                    <input class="visually-hidden products-filter__checkbox" type="checkbox" value="pink">
+                    <span class="control__mark"></span>
+                    <span class="products-filter__checkbox-text">Розовый</span>
                   </label>
                 </fieldset>
                 <fieldset class="products-filter__bluetooth">
                   <legend class="products-filter__title bluetooth-title">Bluetooth</legend>
-                  <label class="products-filter__bluetooth-label">
-                    <input class="products-filter__radio" type="radio" value="have"> <span class="products-filter__radio-text">Есть</span>
+                  <label class="products-filter__bluetooth-label control">
+                    <input class="visually-hidden products-filter__radio" type="radio" value="have" name="bluetooth" checked>
+                    <span class="control__mark control__mark-range"></span>
+                    <span class="products-filter__radio-text">Есть</span>
                   </label>
-                  <label class="products-filter__bluetooth-label">
-                    <input class="products-filter__radio" type="radio" value="haven't"> <span class="products-filter__radio-text">Нет</span>
+                  <label class="products-filter__bluetooth-label control">
+                    <input class="visually-hidden products-filter__radio" type="radio" value="haven't" name="bluetooth">
+                    <span class="control__mark control__mark-range"></span>
+                    <span class="products-filter__radio-text">Нет</span>
                   </label>
                 </fieldset>
                 <button class="products-filter__button button" type="submit">Показать</button>
