Доделал стилизацию карточек каталога

--- a/catalog.html
+++ b/catalog.html
@@ -198,6 +198,9 @@
                   <li class="catalog__item">
                     <a class="catalog__link" href="#">
                       <img class="catalog__image" src="img/products/product-1.png" alt="Любительская селфи-палка" width="360" height="380">
+                      <div class="catalog__image-info">
+                        <a href="#" class="catalog__image-link link">Подробнее</a>
+                      </div>
                       <div class="catalog__description-wrapper">
                         <h4 class="catalog__product-name">Любительская <br> селфи-палка</h4>
                         <span class="catalog__price">500 ₽</span>
@@ -207,6 +210,9 @@
                   <li class="catalog__item">
                     <a class="catalog__link" href="#">
                       <img class="catalog__image" src="img/products/product-2.png" alt="Профессиональная селфи-палка" width="360" height="380">
+                      <div class="catalog__image-info">
+                        <a href="#" class="catalog__image-link link">Подробнее</a>
+                      </div>
                       <div class="catalog__description-wrapper">
                         <h4 class="catalog__product-name">Профессиональная селфи-палка </h4>
                         <span class="catalog__price">1 500 ₽</span>
@@ -215,6 +221,9 @@
                   </li><li class="catalog__item">
                     <a class="catalog__link" href="#">
                       <img class="catalog__image" src="img/products/product-3.png" alt="Непотопляемая селфи-палка" width="360" height="380">
+                      <div class="catalog__image-info">
+                        <a href="#" class="catalog__image-link link">Подробнее</a>
+                      </div>
                       <div class="catalog__description-wrapper">
                         <h4 class="catalog__product-name">Непотопляемая <br> селфи-палка</h4>
                         <span class="catalog__price">2 500 ₽</span>
@@ -223,6 +232,9 @@
                   </li><li class="catalog__item">
                     <a class="catalog__link" href="#">
                       <img class="catalog__image" src="img/products/product-4.png" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+                      <div class="catalog__image-info">
+                        <a href="#" class="catalog__image-link link">Подробнее</a>
+                      </div>
                       <div class="catalog__description-wrapper">
                         <h4 class="catalog__product-name">Селфи-палка «Следуй за мной»</h4>
                         <span class="catalog__price">1 500 ₽</span>
