подогнал главную страницу под pixel perfect

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="main-goods__image-wrapper main-goods__image-wrapper--selfie-monopodes">
                   <img class="main-goods__image" src="img/icons/monopodes.svg" width="86" height="117" alt="Монопод для селфи"></img>
                 </div>
-                <h3 class="main-goods__title">Моноподы для селфи</h3>
+                <h3 class="main-goods__title">Моноподы <br> для селфи</h3>
               </a>
             </li>
             <li class="main-goods__item">
@@ -294,7 +294,7 @@
           <div class="additional-info">
             <section class="site-info">
               <h2 class="site-info__title title">О нас</h2>
-              <p class="site-info__text text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+              <p class="site-info__text text">Огромный выбор гаджетов не оставит равнодушным <br> гика, который есть в каждом из нас.</p>
               <p class="site-info__text text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
               <ul class="site-info__list">
                 <li class="site-info__item">Меловые линии</li>
