подогнал каталог под pixel perfect

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body class="page__body">
     <h1 class="visually-hidden">Каталог моноподов для селфи</h1>
     <header class="page-header">
-      <div class="page-header__container">
+      <div class="page-header__container page-header__container--catalog">
         <a href="index.html" tabindex="-1">
           <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36" tabindex="1">
         </a>
