Исправил ошибки и добавил декоративные элементы

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
           </ul>
         </div>
         <nav class="site-navigation page-header__site-navigation">
-          <a class="site-navigation__product-catalog" href="#">Каталог товаров</a>
+          <button class="site-navigation__product-catalog" type="button">Каталог товаров</button>
           <div class="popover popover-product-catalog">
             <ul class="popover__list">
               <li class="popover__item"><a class="popover__link" href="#">Виртуальная реальность</a></li>
